# shg-ml-benchmarks

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/claude-3.5-sonnet/: benchmark.py  requirements.txt
benchmarks/claude-3.5-sonnet/tasks/distribution_125/: claude-3.5-sonnet-composition-icl_results.json
benchmarks/claude-sonnet-3.5/: benchmark.py
benchmarks/coGN/: benchmark.py  run.py
benchmarks/coGN/training/: prepare_dataset.py
benchmarks/coNGN/: benchmark.py  run.py
benchmarks/coNGN/training/: prepare_dataset.py  prepare_dataset_coNGN.py
benchmarks/darwin-1.5/: README.md  benchmark.py
benchmarks/darwin_1.5/: README.md  benchmark.py
benchmarks/deepseek-chat/: benchmark.py
benchmarks/et/: benchmark.py  train.py  train_gdsearch.py  train_mbk.py
benchmarks/et/training/: scp_features.sh  scp_gdsearch.sh  scp_models.sh
benchmarks/lgbm/: benchmark.py  cp_features.sh  train.py  train_gdsearch.py
benchmarks/lgbm/training/: scp_features.sh
benchmarks/matten/: README.md  benchmark.py
benchmarks/matten/datasets/: README.md  dataset_holdout_distribution_250.json  dataset_validation_distribution_125.json
benchmarks/matten/predict_distribution_125/: config_final.yaml  stats.ipynb
benchmarks/matten/predict_distribution_250/: predict_general.py  stats.ipynb
benchmarks/matten/predict_random_125/: config_final.yaml  stats.ipynb
benchmarks/matten/predict_random_250/: predict_general.py  stats.ipynb
benchmarks/matten/training/: README.md
benchmarks/mean_value/: README.md  benchmark.py
benchmarks/median_value/: README.md  benchmark.py
benchmarks/megnet/: README.md  benchmark.py  requirements.txt
benchmarks/modnet/: benchmark.py  stats.ipynb  train.py
benchmarks/modnet/training/: scp_moddata_featselect.sh  scp_models.sh
benchmarks/modnet_nan/: benchmark.py  train.py
benchmarks/modnet_nan/training/: scp_moddata_featselect.sh  scp_moddata_notfeatselect.sh  scp_models.sh
benchmarks/openai-gpt-4o/: benchmark.py
benchmarks/results_stats/: generate_stats.ipynb
benchmarks/tensornet/: benchmark.py
data/: README.md  holdout_id_distribution_125.json  holdout_id_distribution_250.json  holdout_id_distribution_500.json  holdout_id_random_125.json  holdout_id_random_250.json  holdout_id_random_500.json  validation_id_distribution_125.json  validation_id_distribution_250.json  validation_id_random_125.json  validation_id_random_250.json
data_analysis/: 00_figures.ipynb
references/: README.md
results/: featurizing_new_db.py  generate_stats.ipynb  predicting_new_db.py  summary.json
results/screening/: README.md  featurizing_new_db.py  get_datasets.py  plots.py  post-filter-centrosymmetry.py  predicting_new_db.py  requirements.txt  transform-to-df.py
screening/: get_datasets.py
scripts_raw/: README.md  SHG_Tensor_Func.py  SHG_Tensor_to_Conventional.py  define_holdout_set.py  describe_holdout_set.ipynb  find_conventional_dijk.ipynb
scripts_raw/active_learning/: 01_handling_outputs.ipynb  02_updating_moddata.py  03_bmk_modnet.ipynb  04_production.ipynb  05_selection.ipynb  06_launch.ipynb
src/shg_ml_benchmark/: __init__.py
src/shg_ml_benchmarks/: __init__.py  analysis.py  llm_utils.py  utils.py  utils_shg.py
tests/: conftest.py  test_dummy.py  test_init.py
(+2509 files in other folders)
